@@ -1,3 +1,8 @@
+
+
+2022-01-10 Franz Holzinger <franz@ttproducts.de>
+    * remove ExtDirectRouter
+
 2022-01-06 Franz Holzinger <franz@ttproducts.de>
     * new requirement: PHP 8
 
